# netbox-qrcode

./: .gitignore  MANIFEST.in  Makefile  README.md  configmap.md  pyproject.toml  setup.py
develop/: Dockerfile  configuration.py  docker-compose.yml
netbox_qrcode/: __init__.py  admin.py  filters.py  forms.py  models.py  navigation.py  tables.py  template_content.py  urls.py  utilities.py  version.py  view.py  views.py
netbox_qrcode/migrations/: 0001_initial.py  0002_auto_20210403_2224.py  0002_auto_20210420_0042.py  0002_qrextendedcable_name.py  0002_qrextendeddevice_location_qrextendeddevice_region_and_more.py  0002_remove_qrextendedcable_label.py  0003_alter_qrextendedrack_role.py  0003_auto_20210403_2225.py  0003_remove_qrextendedcable_name_and_more.py  0004_auto_20210404_0018.py  0005_auto_20210404_0120.py  0006_auto_20210404_0449.py  0007_remove_qrextendeddevice_device.py  0008_auto_20210404_0454.py  0009_auto_20210404_0513.py  0010_auto_20210404_0517.py  0011_qrextendeddevice_device.py  0012_auto_20210404_0559.py  0013_auto_20210405_1407.py  0014_auto_20210405_1416.py  0015_auto_20210405_1420.py  0016_auto_20210405_1428.py  0017_auto_20210405_2140.py  0018_auto_20210405_2140.py  0019_auto_20210405_2236.py  0020_auto_20210405_2250.py  0021_auto_20210405_2254.py  0022_qrextendeddevice_status.py  0023_qrextendedrack_status.py  0024_auto_20210408_0035.py  0025_auto_20210408_0036.py  0026_auto_20210408_0036.py  0027_auto_20210408_0056.py
netbox_qrcode/templates/netbox_qrcode/: cables.html  devices.html  home.html  locations.html  print.html  qrbase.html  racks.html  (+2 more)
(+1 files in other folders)
