[tool.poetry]
name = "netbox-qrcode"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    {include = "netbox_qrcode"},
]
[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^20.8b1"
invoke = "^1.5.0"
pylint = "^2.7.4"
pylint-django = "^2.4.3"
pydocstyle = "^6.0.0"
yamllint = "^1.26.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
